SCIP version NEXT
=================

features:
- added macros to do computations with a higher precision by using double double arithmetic
- new compiler flag DEBUGSOL={true,false} to enable an internal debugging mechanism to check against a user given debug solution
- added interface to the NLP solver WORHP; set WORHP=true in order to link to WORHP

parameters:
- new parameter misc/debugsol to specify a debug solution that should be checked during the solve
- fixed typo: heuristics/completesol/maxunkownrate has changed to heuristics/completesol/maxunknownrate
- new parameters: beforepresol, maxlpiter, and maxcontvars in heur_completesol.c
- new parameter: lp/refactorinterval to change the refactorization interval of the LP solver

interface:
- added method SCIPsetProbingLPState() to install given LP state and/or norms at the current probing node

performance improvements:
- add and use RESTRICT macro for some pointers
- improved the implementation of SCIPvarGetActiveRepresentatives

SCIP version 4.0.1
==================

fixed bugs:
- fixed memory leak in OSiL reader when using SOS constraints
- fixed issue related to SCIPcreateFiniteSolCopy not being able to remove all infinite fixings
- fixed issue in SCIPcopyLimits() w.r.t. soft time limit
- improved handling of infinite values in a primal solution in quadratic and nonlinear constraints
- fixed bug in dynamic resizing of hashtables and hashmaps
- fixed bug in computing violation and cut for certain nonlinear constraints when LP solution is slightly out of bounds
- fixed bug in binpacking example that might have led to doing the same branching several times
- fixed memory issue in binpacking example

performance improvements:
- widened a bottleneck in simplifying long signomial sums in a nonlinear constraint
- sorting of parents and children for some expression types is now independent of memory layout

SCIP version 4.0.0
==================

features: